Implementation of better DB security using schema in PostgreSQL, better create/destroy tools for the DB, compressed many similar routings in the Analysis site (better code), some advice for managing the config added to the etc/README.pod

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -18,32 +18,36 @@
 	type	=	Pg
 	host	=	localhost
 	port	=
+	# Database and Schema names are completely open, change at will
+	# but then stick with it ;-)
 	name	=	rpzla
 	schema = 	rpzla_schema
 	# Access user accounts.  
 	# The 'log' user gets 'INSERT' permissions only.  
 	<log>
+		# Sample user name, change at will (e.g Alice)
 		user	=	rpzla_log
 		# PASSWORD here !! CHANGE !!
-		pass	=	your-choice
+		pass	=	this-identity-gets-to-insert-data
 	</log>
 	# The 'Analysis' user gets 'SELECT' only.
 	<analysis>
+		# Sample user name, change at will (e.g Bob)
 		user	=	rpzla_analysis
 		# PASSWORD here !! CHANGE !!
-		pass	=	a-different-choice
+		pass	=	this-identity-gets-to-select-the-data
 	</analysis>
 </db>
 
 #
-# Which file contains the BIND rpz logs?
+# Which file contains the BIND rpz logs on the resolver?
 #
 <bind>
 	log	=	/usr/local/var/named/data/named.log.query
 </bind>
 
 #
-# Where is the access log for the walled garden site?
+# Where is the access log for the walled garden site on its server?
 #
 <walled-garden>
 	log	=	/var/log/httpd/walled_garden-access_log
