BIND log config and parsing changes

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -43,7 +43,7 @@
 # Which file contains the BIND rpz logs on the resolver?
 #
 <bind>
-	log	=	/usr/local/var/named/data/named.log.query
+	log	=	/usr/local/var/named/data/named.log.rpz
 </bind>
 
 #
