operational merge of apache scraper (plus new config element)

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -51,6 +51,9 @@
 #
 <walled-garden>
 	log	=	/var/log/httpd/walled_garden-access_log
+	# This is the real name of the site (will be ignored in log scraping)
+	# ie. only visits to other names will be logged
+	domain	=	warning.yourdomain.foo
 </walled-garden>
 
 #
