Changes to bin/rpzla-apache and etc/rpzla.conf to allow specification of multiple sites that are valid for the walled-garden (and thus not to have logs shipped to the DB).

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -51,9 +51,16 @@
 #
 <walled-garden>
 	log	=	/var/log/httpd/walled_garden-access_log
-	# This is the real name of the site (will be ignored in log scraping)
-	# ie. only visits to other names will be logged
-	domain	=	warning.yourdomain.foo
+	# When transferring log records from the apache access log we
+	# wish to NOT transfer visits to valid sites, only those that
+	# are RPZ DNS redirected.  Thus, list here all of the valid
+	# sites that run on the walled-garden web server.
+	<valid_sites>
+		# direct visits to the warning site are valid
+		domain	=	warning.foo.org
+		# Also run the rpzla site on the same server
+		domain	=	rpzla.foot.org
+	</valid_sites>
 </walled-garden>
 
 #
