Use of OO.  The scrapers are almost identical.

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -18,25 +18,14 @@
 	type	=	Pg
 	host	=	localhost
 	port	=
-	# Database and Schema names are completely open, change at will
-	# but then stick with it ;-)
+	# Database name and credential.  Change to whatever you want/created
 	name	=	rpzla
-	schema = 	rpzla_schema
-	# Access user accounts.  
-	# The 'log' user gets 'INSERT' permissions only.  
-	<log>
-		# Sample user name, change at will (e.g Alice)
-		user	=	rpzla_log
-		# PASSWORD here !! CHANGE !!
-		pass	=	this-identity-gets-to-insert-data
-	</log>
-	# The 'Analysis' user gets 'SELECT' only.
-	<analysis>
-		# Sample user name, change at will (e.g Bob)
-		user	=	rpzla_analysis
-		# PASSWORD here !! CHANGE !!
-		pass	=	this-identity-gets-to-select-the-data
-	</analysis>
+	user	=	rpzla
+	pass	=	you-need-to-change-this
+	#
+	# commit interval: after how many inserts should a scraper commit?
+	#
+	commit_interval = 3
 </db>
 
 #
@@ -59,7 +48,7 @@
 		# direct visits to the warning site are valid
 		domain	=	warning.foo.org
 		# Also run the rpzla site on the same server
-		domain	=	rpzla.foot.org
+		domain	=	rpzla.foo.org
 	</valid_sites>
 </walled-garden>
 
