Minor improvements: Makefile tweaks and Apache.

--- a/init.d/sys-v/Makefile
+++ b/init.d/sys-v/Makefile
@@ -28,8 +28,9 @@ clean:
 clobber:
 	rm -f $(INIT_DIR)/rpzla-bind $(INIT_DIR)/rpzla-apache
 
-$(INIT_DIR)/%:	%
+$(INIT_DIR)/%:  %
 	$(INSTALL) $< $@
-	chkconfig $< on
+	$(TURN_ON) $< on
+
 
 .dummy:
