Framework for first level pattern analysis.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,6 @@
 
-PERL_BASE	:=	/usr/lib64/perl5/vendor_perl
+PERL_BASE	:=	/usr/share/perl5
+# PERL_BASE	:=	/usr/lib/perl5/vendor_perl
 export PERL_DIR	:=	$(PERL_BASE)
 
 all:	install
