--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,10 +3,14 @@ PERL_BASE	:=	/usr/share/perl5
 # PERL_BASE	:=	/usr/lib/perl5/vendor_perl
 export PERL_DIR	:=	$(PERL_BASE)
 
-all:	install
+all:
+	@@echo choose analysis or scraper, different libs for different things
 
-install:
-	$(MAKE) -C RPZLA $@
+scraper:
+	$(MAKE) -C RPZLA scraper
+
+analysis:
+	$(MAKE) -C RPZLA analysis
 
 clobber:
 	$(MAKE) -C RPZLA $@
