--- a/lib/RPZLA/Makefile
+++ b/lib/RPZLA/Makefile
@@ -4,12 +4,14 @@ export BASE	:=	$(NAME)
 
 LIB_DIR		:=	$(PERL_DIR)/$(NAME)
 
-all:		install
+all:
+	@@echo choose analysis or scraper, different libs for different things
 
-install:	\
-		$(LIB_DIR)
-	$(MAKE) -C Scraper $@
-	$(MAKE) -C Analysis $@
+scraper:	$(LIB_DIR)
+	$(MAKE) -C Scraper install
+
+analysis:	$(LIB_DIR)
+	$(MAKE) -C Analysis install
 	
 
 clean:		
@@ -17,6 +19,7 @@ clean:
 
 clobber:
 	$(MAKE) -C Scraper $@
+	$(MAKE) -C Analysis $@
 	rm -f $(LIB_TARGETS)
 	rmdir $(LIB_DIR)
 
