--- a/web/analysis/Makefile
+++ b/web/analysis/Makefile
@@ -1,6 +1,8 @@
 
 CGI_DIR		:=	/var/www/html/rpzla
 
+LIB_DIR		:=	../../lib/
+
 export CGI_DIR	:=	$(CGI_DIR)
 
 CGI_SRCS	:=	\
@@ -16,21 +18,25 @@ INSTALL		:=	install -m 755
 # Targets
 # ------------------------
 
-all:		install templates
+all:		install templates analysis
 
 install:	$(CGI_DIR) $(CGI_TARGETS)
 	cp -r Mojolicious public $(CGI_DIR)
 	@echo "use make install-config if you wish to do that"
 
+templates: .dummy
+	$(MAKE) -C $(TEMPLATE_DIR)
+
+analysis:
+	$(MAKE) -C $(LIB_DIR) $@
+
 install-config:
 	cp ../../etc/rpzla.conf $(CGI_DIR)
+
 clobber:
 	rm -f $(CGI_TARGETS)
 	rm -rf $(CGI_BIN)/Mojolicious
 	rm -rf $(CGI_BIN)/public
-
-templates: .dummy
-	$(MAKE) -C $(TEMPLATE_DIR)
 
 $(CGI_DIR):
 	mkdir $(CGI_DIR)
