zone to db filter

--- a/etc/rpzla.conf
+++ b/etc/rpzla.conf
@@ -33,6 +33,23 @@
 #
 <bind>
 	log	=	/usr/local/var/named/data/named.log.rpz
+	#
+	# Control hits on which zone(s) get logged to the database
+	# i.e one may wish to not ship to the DB hits against zone
+	# zones (e.g whitelists or blocklists etc.).
+	#
+	# This is an optional section.  If ommitted, or empty, hits
+	# on all zones get shipped to the DB.
+	# 
+	<zone_filter>
+		# Ship any hits against zones in the <list> to the DB ??
+		zone_to_db = 1 # 1 == yes (default), 0 == no 
+		# the list of zone names to be matched
+		<list>
+			zone = black.local
+			zone = black.reputation_provider.tld
+		</list>
+	</zone_filter>
 </bind>
 
 #
